# steel-city-mailers

./: Cargo.toml  README.md
src/: authorization.rs  mailchimp_config.rs  main.rs
