[package]
name = "steel-city-mailers"
version = "0.1.0"
authors = ["hiimtaylorjones <taylorjonessoftware@gmail.com>"]

[dependencies]
futures = "0.1.11"
native-tls = "0.1"
tokio-core = "0.1.6"
tokio-io = "0.1"
tokio-tls = "0.1"
tokio-service = "0.1"
hyper = "0.11"
tokio-proto = { version = "0.1", optional = true }
dotenv = "0.10.1"
